# pai

./: LICENSE  README.md  app.py
pai-audit/: README.md  app.py  pyproject.toml  requirements.txt
pai-audit/core/: __init__.py  federated_learning.py  give_nudge.py  impact_feedback.py  llm_client.py  portfolio_optimizer.py
pai-audit/core/federated_rag/: __init__.py  __main__.py  config.py  demo.py  document_loader.py  embeddings.py  federated_query.py  federated_trainer.py  generator.py  hallucination_detector.py  local_rag.py  retriever.py  streamlit_ui.py  vector_store.py
pai-audit/data/knowledge_base/: behavioral_economics.md  daf_investment.md  daf_tax_strategies.md  federated_learning.md  givewell_charities.md  impact_measurement.md  rare_disease.md
pai-audit/tests/: test_federated_rag.py  test_v04_modules.py
pai-cloud/: README.md  requirements.txt
pai-deploy/: app.py
